[branch-2.9][fix][broker] Fix jdk API compatibility issues.